--- a/clinica/exame/templates/exame/cadastro_consulta_sem_dentes.html
+++ b/clinica/exame/templates/exame/cadastro_consulta_sem_dentes.html
@@ -24,7 +24,7 @@
     <form action="{% url 'crianca:cadastrar_consulta_sem_dentes' pk=crianca.pk %}" method="post">
       {% csrf_token %}
       
-      <div class="form-group col-md-12">
+      <!-- <div class="form-group col-md-12">
         
         <div class="form-group col-md-3">
           <label for="{{ form.user.id_for_label }}">Usuário que Cadastrou</label>
@@ -40,7 +40,7 @@
                     <span class="help-block">{{ error }}</span>
            {% endfor %}
         </div>
-      </div>
+      </div> -->
 
       <div class="form-group col-md-12">
         <h3 style="color: #fc8100">Higiene do Bebê</h3>
