--- a/clinica/exame/templates/exame/cadastro_retorno.html
+++ b/clinica/exame/templates/exame/cadastro_retorno.html
@@ -28,7 +28,7 @@
         {{ hidden }}
       {% endfor %}
       
-      <div class="form-group col-md-12">
+      <!-- <div class="form-group col-md-12">
         <div class="form-group col-md-3">
           <label for="{{ form.user.id_for_label }}">Usuário que Cadastrou</label>
           {{ form.user|add_class:'form-control'}}
@@ -43,7 +43,7 @@
                     <span class="help-block">{{ error }}</span>
            {% endfor %}
         </div>
-      </div>
+      </div> -->
 
       <div class="form-group col-md-12">
         <h3 style="color: #fc8100">Amamentação</h3>
